--- a/src/Styles/MainWindowStyle.xaml
+++ b/src/Styles/MainWindowStyle.xaml
@@ -4,6 +4,10 @@
     <Style x:Key="MenuButton" TargetType="Button">
         <Setter Property="Width" Value="40"></Setter>
         <Setter Property="Height" Value="40"></Setter>
-        <Setter Property="Background" Value="Transparent"></Setter>
+        <Setter Property="Background" Value="White"></Setter>
+
+        <Style.Triggers>
+
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
