1.Change database;2.Saved job to db;3.Added toast

--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -27,6 +27,12 @@
         </ResourceDictionary>
     </Window.Resources>
 
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closing">
+            <local:EventCommand Command="{Binding WindowClosingCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
     <StackPanel>
         <StackPanel.ContextMenu>
             <ContextMenu>
