--- a/src/ReportWindow.xaml
+++ b/src/ReportWindow.xaml
@@ -5,7 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_8Hours"
         mc:Ignorable="d"
-        Title="ReportWindow" Height="450" Width="800">
+        Title="ReportWindow" Height="450" Width="800"
+        ShowInTaskbar="False" 
+        WindowStyle="None"
+        BorderThickness="24"
+        AllowsTransparency="True"
+        WindowStartupLocation="CenterOwner"
+        MouseDown="Window_MouseDown"
+        >
+    <Window.Effect>
+        <DropShadowEffect BlurRadius="24"  Direction="90" ShadowDepth="3"/>
+    </Window.Effect>
+
     <Grid>
         <TextBlock>报告</TextBlock>
     </Grid>
