--- a/src/App.xaml
+++ b/src/App.xaml
@@ -4,6 +4,21 @@
              xmlns:local="clr-namespace:_8Hours"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="BtnMouseOverOpacity" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" BorderThickness="0">
+                            <ContentPresenter/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Opacity" Value="0.5" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
