--- a/src/ReportWindow.xaml
+++ b/src/ReportWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_8Hours"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:wpf="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         mc:Ignorable="d"
         Title="ReportWindow" Height="450" Width="800"
         WindowStyle="None"
@@ -21,61 +22,64 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="\Styles\ReportWindowStyle.xaml"></ResourceDictionary>
+                <!--Material design colors-->
+                <ResourceDictionary Source="pack://application:,,,/LiveCharts.Wpf;component/Themes/Colors/material.xaml" />
+
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
 
-    <StackPanel Style="{StaticResource MainBlock}">
-        <DockPanel>
-            <Grid DockPanel.Dock="Top">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0">多读书，少摸鱼</TextBlock>
-                <Button Grid.Column="2" Style="{StaticResource CloseButton}">
+    <DockPanel Style="{StaticResource MainBlock}">
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0">多读书，少摸鱼</TextBlock>
+            <Button Grid.Column="2" Style="{StaticResource CloseButton}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <local:EventCommand Command="{Binding BtnCloseCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+                <Image Source="\Images\close_32px.png"></Image>
+            </Button>
+        </Grid>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
+                <RadioButton IsChecked="True">
+                    近7天
                     <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Click">
-                            <local:EventCommand Command="{Binding BtnCloseCommand}"/>
+                        <i:EventTrigger EventName="Checked">
+                            <local:EventCommand Command="{Binding RadioConditionIsCheckedCommand}" CommandParameter="7"/>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
-                    <Image Source="\Images\close_32px.png"></Image>
-                </Button>
-            </Grid>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"></RowDefinition>
-                    <RowDefinition Height="*"></RowDefinition>
-                </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0" Orientation="Horizontal">
-                    <RadioButton>
-                        当天
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Checked">
-                                <local:EventCommand Command="{Binding RadioConditionIsCheckedCommand}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </RadioButton>
-                    <RadioButton>
-                        近7天
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Checked">
-                                <local:EventCommand Command="{Binding RadioConditionIsCheckedCommand}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </RadioButton>
-                    <RadioButton>
-                        近30天
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Checked">
-                                <local:EventCommand Command="{Binding RadioConditionIsCheckedCommand}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                    </RadioButton>
-                </StackPanel>
-                <StackPanel Grid.Row="1"></StackPanel>
-            </Grid>
-        </DockPanel>
-    </StackPanel>
+                </RadioButton>
+                <RadioButton>
+                    近30天
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Checked">
+                            <local:EventCommand Command="{Binding RadioConditionIsCheckedCommand}" CommandParameter="30"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </RadioButton>
+            </StackPanel>
+            <DockPanel Grid.Row="1">
+                <wpf:CartesianChart Series="{Binding SeriesCollection}"
+                                    LegendLocation="Top">
+                    <wpf:CartesianChart.AxisX>
+                        <wpf:Axis Title="日期"></wpf:Axis>
+                    </wpf:CartesianChart.AxisX>
+                    <wpf:CartesianChart.AxisY>
+                        <wpf:Axis Title="时间(分钟)"></wpf:Axis>
+                    </wpf:CartesianChart.AxisY>
+                </wpf:CartesianChart>
+            </DockPanel>
+        </Grid>
+    </DockPanel>
 </Window>
