--- a/src/Styles/ReportWindowStyle.xaml
+++ b/src/Styles/ReportWindowStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="MainBlock" TargetType="StackPanel">
+    <Style x:Key="MainBlock" TargetType="DockPanel">
         <Setter Property="Margin" Value="10"></Setter>
     </Style>
     <Style x:Key="CloseButton" TargetType="Button" BasedOn="{StaticResource BtnMouseOverOpacity}">
