Modified from reference 'System.Windows.Interactivity' to 'Microsoft.Xaml.Behaviors'

--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -3,14 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:local="clr-namespace:_8Hours"
         mc:Ignorable="d"
         Title="MainWindow"
         ShowInTaskbar="False"
         WindowStyle="None"
         AllowsTransparency="True" 
-        Background="Black"  
+        Background="#6a85b6"  
         Topmost="True"
         ResizeMode="NoResize"
         Height="{Binding WindowLocation.Height,Mode=TwoWay}" 
