--- a/src/Styles/MainWindowStyle.xaml
+++ b/src/Styles/MainWindowStyle.xaml
@@ -5,5 +5,6 @@
         <Setter Property="Width" Value="40"></Setter>
         <Setter Property="Height" Value="40"></Setter>
         <Setter Property="Background" Value="White"></Setter>
+        <Setter Property="BorderBrush" Value="#DBF2FF"></Setter>
     </Style>
 </ResourceDictionary>
