--- a/src/Styles/ReportWindowStyle.xaml
+++ b/src/Styles/ReportWindowStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf">
 
     <Style x:Key="MainBlock" TargetType="DockPanel">
         <Setter Property="Margin" Value="10"></Setter>
@@ -14,5 +15,41 @@
     <Style x:Key="TxtTips" TargetType="TextBlock">
         <Setter Property="FontSize" Value="16"></Setter>
         <Setter Property="Foreground" Value="#CF7C72"></Setter>
+    </Style>
+
+    <Style x:Key="TabControl" TargetType="TabControl">
+        <Setter Property="TabStripPlacement" Value="Left"></Setter>
+        <Setter Property="VerticalAlignment" Value="Top"></Setter>
+        <Setter Property="Background" Value="Transparent"></Setter>
+        <Setter Property="BorderThickness" Value="1,0,0,0"></Setter>
+        <Setter Property="Height" Value="{Binding ElementName=MainPanel, Path=ActualHeight}"></Setter>
+    </Style>
+    <Style x:Key="TabItem" TargetType="TabItem">
+        <Setter Property="Width" Value="70"></Setter>
+        <Setter Property="Height" Value="40"></Setter>
+        <Setter Property="FontSize"  Value="16"></Setter>
+        <Setter Property="Foreground" Value="#4A403A"></Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TabItem}">
+                    <Grid>
+                        <Border Name="Border" BorderThickness="0,0,0,1" CornerRadius="6,0,0,0">
+                            <ContentPresenter x:Name="ContentSite" VerticalAlignment="Center" HorizontalAlignment="Center" ContentSource="Header" Margin="2"/>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Foreground" Value="#FFC069" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ReportPieChart" TargetType="lvc:PieChart">
+        <Setter Property="Hoverable" Value="True"></Setter>
+        <Setter Property="LegendLocation" Value="Bottom"></Setter>
+        <Setter Property="InnerRadius" Value="50"></Setter>
     </Style>
 </ResourceDictionary>
